Fix a flickering issue of the chartDiv
1. As-is
    - When the window is small & the number of chart is below 12
    - Window's size : between col-lg-3 and col-md-6
    - Chart.js has its own resizing functions to fix the overflow.
    - Thus, the process of fixing is exposed when the chart is rendered.
    - The overflow option is default(visible)
2. To-be
    - Change the overflow option to hidden.
    - Side-effect : the "row" class is also used in the index Page.
        - In the index page, overflow:hidden isn't a proper way.
        - Thus, a new class "chartrow" to only fit the chartDiv is 
added.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -553,6 +553,11 @@ table.no-margin .progress {
   margin-right: -10px;
   margin-left: -10px
 }
+.chartrow {
+  margin-right: -10px;
+  margin-left: -10px;
+  overflow: hidden;
+}
 .grid_slider .col-md-6 {
   padding: 0 40px
 }
